--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Our Team</title>
 </head>
 <body>
-    <div class="container p-5">
+    <div class="container p-3">
         <h6 class="text-uppercase text-center mb-3">Our Team</h6>
         <p class="paragraph text-center mb-4 w-50 mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta odit, quibusdam ex at in nemo repellat? Aut voluptates ipsa nam similique ratione.</p>
-        <div id="team-members" class="d-flex flex-wrap gap-3 row-gap-4 justify-content-center"></div>
+        <div id="team-members" class="w-50 mx-auto"></div>
     </div>
 
     
